apps/parks-app/manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: parks-app

---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: restify
  namespace: parks-app
  labels:
    app: restify
spec:
  strategy:
    resources: {}
  triggers:
  - type: ConfigChange
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - restify
      from:
        kind: ImageStreamTag
        name: "restify:latest"
  replicas: 1
  selector:
    app: restify
    deploymentconfig: restify
  template:
    metadata:
      creationTimestamp: 
      labels:
        app: restify
        deploymentconfig: restify
    spec:
      volumes:
      - name: "restify-volume-1"
        emptyDir: {}
      containers:
      - name: restify
        image: library/restify:latest
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: "restify-volume-1"
          mountPath: "/run"
status: {}

---
kind: Route
apiVersion: v1
metadata:
  name: restify
  namespace: parks-app
  labels:
    app: restify
spec:
  to:
    kind: Service
    name: restify
  port:
    targetPort: '8080'
status: {}

---
kind: Service
apiVersion: v1
metadata:
  name: restify
  namespace: parks-app
  labels:
    app: restify
spec:
  ports:
  - name: 8080-tcp
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: restify
    deploymentconfig: restify
status:
  loadBalancer: {}

---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: mongodb
  namespace: parks-app
spec:
  strategy:
    type: Recreate
    resources: {}
  triggers:
  - type: ImageChange
    imageChangeParams:
      automatic: false
      containerNames:
      - mongodb
      from:
        kind: ImageStreamTag
        name: mongodb:latest
        namespace: openshift
      lastTriggeredImage: ''
  - type: ConfigChange
  replicas: 1
  selector:
    name: mongodb
  template:
    metadata:
      creationTimestamp: 
      labels:
        name: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongodb
        ports:
        - containerPort: 27017
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: "mongodb-data"
          mountPath: "/var/lib/mongodb/data"
        terminationMessagePath: "/dev/termination-log"
        imagePullPolicy: IfNotPresent
        capabilities: {}
        securityContext:
          capabilities: {}
          privileged: false
      volumes:
      - name: "mongodb-data"
        persistentVolumeClaim:
          claimName: "mongodb-data-claim"
      restartPolicy: Always
      dnsPolicy: ClusterFirst
status: {}

---
kind: Service
apiVersion: v1
metadata:
  name: mongodb
  namespace: parks-app
spec:
  ports:
  - name: mongo
    protocol: TCP
    port: 27017
    targetPort: 27017
    nodePort: 0
  selector:
    name: mongodb
  portalIP: ''
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
